# pandoc-slide-filter

./: LICENSE  README.md  TODO.md  pandoc-slide-filter.cabal  stack.yaml
app/: All.hs  Clean.hs  Cols.hs  Media.hs  Quiz.hs  Styling.hs
doc/: Text-Pandoc-Util-Filter-Cols.html  Text-Pandoc-Util-Filter-Media.html  Text-Pandoc-Util-Filter-Quiz.html  Text-Pandoc-Util-Filter-Styling.html  Text-Pandoc-Util-Filter.html  doc-index.html  index.html  mini_Text-Pandoc-Util-Filter-Cols.html  mini_Text-Pandoc-Util-Filter-Media.html  mini_Text-Pandoc-Util-Filter-Quiz.html  mini_Text-Pandoc-Util-Filter-Styling.html  mini_Text-Pandoc-Util-Filter.html  pandoc-slide-filter.haddock  pandoc-slide-filter.txt
doc/src/: Text.Pandoc.Util.Filter.Cols.html  Text.Pandoc.Util.Filter.Media.html  Text.Pandoc.Util.Filter.Quiz.html  Text.Pandoc.Util.Filter.Styling.html  Text.Pandoc.Util.Filter.html
src/Text/Pandoc/Util/: Filter.hs
src/Text/Pandoc/Util/Filter/: Cols.hs  Media.hs  Quiz.hs  Styling.hs
