name:                pandoc-slide-filter
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/Drezil/pandoc-slide-filter#readme
license:             BSD3
license-file:        LICENSE
author:              Stefan Dresselhaus
maintainer:          sdressel@techfak.uni-bielefeld.de
copyright:           2017 Stefan Dresselhaus
category:            CLI
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

executable media
  hs-source-dirs:      app
  main-is:             Media.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , pandoc-types
  default-language:    Haskell2010

executable styling
  hs-source-dirs:      app
  main-is:             Styling.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , pandoc-types
  default-language:    Haskell2010

executable quiz
  hs-source-dirs:      app
  main-is:             Quiz.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , pandoc-types
  default-language:    Haskell2010

executable clean
  hs-source-dirs:      app
  main-is:             Clean.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , pandoc-types
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/Drezil/pandoc-slide-filter
