name:                pandoc-slide-filter
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/Drezil/pandoc-slide-filter#readme
license:             BSD3
license-file:        LICENSE
author:              Stefan Dresselhaus
maintainer:          sdressel@techfak.uni-bielefeld.de
copyright:           2017 Stefan Dresselhaus
category:            CLI
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

executable all
  hs-source-dirs:      app
  main-is:             All.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , pandoc-types
                     , pandoc-slide-filter
  default-language:    Haskell2010

executable media
  hs-source-dirs:      app
  main-is:             Media.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , pandoc-types
                     , pandoc-slide-filter
  default-language:    Haskell2010

executable cols
  hs-source-dirs:      app
  main-is:             Cols.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , pandoc-types
                     , pandoc-slide-filter
  default-language:    Haskell2010

executable styling
  hs-source-dirs:      app
  main-is:             Styling.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , pandoc-types
                     , pandoc-slide-filter
  default-language:    Haskell2010

executable quiz
  hs-source-dirs:      app
  main-is:             Quiz.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , pandoc-types
                     , pandoc-slide-filter
  default-language:    Haskell2010

executable clean
  hs-source-dirs:      app
  main-is:             Clean.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , pandoc-types
                     , pandoc-slide-filter
  default-language:    Haskell2010

library
  hs-source-dirs:      src
  build-depends:       base
                     , pandoc-types
                     , filepath
  default-language:    Haskell2010
  exposed-modules:     Text.Pandoc.Util.Filter
                     , Text.Pandoc.Util.Filter.Cols
                     , Text.Pandoc.Util.Filter.Media
                     , Text.Pandoc.Util.Filter.Styling
                     , Text.Pandoc.Util.Filter.Quiz

source-repository head
  type:     git
  location: https://github.com/Drezil/pandoc-slide-filter
